--- a/wp-content/themes/thebe/css/layout.css
+++ b/wp-content/themes/thebe/css/layout.css
@@ -26,7 +26,7 @@ body {
   font-family: "HelveticaNeueW02-55Roma", arial, san-serif;
 	font-weight: normal;
 	font-size: 11px;
-	color: #7F7773;
+	color: #7f7773;
 	line-height: normal;
 }
 
@@ -53,9 +53,7 @@ ul {
 	padding: 50px 15px;
 }
 
-b {
-  font-family:"HelveticaNeueW02-75Bold", arial, san-serif;
-}
+
 
 
 
